# Project

./: README.md
prot-psdk/: CMakeLists.txt
prot-psdk/psdk_lib/include/: dji_camera_manager.h  dji_fc_subscription.h  dji_flight_controller.h  dji_hms_customization.h  dji_interest_point.h  dji_liveview.h  dji_typedef.h  dji_version.h
prot-psdk/source/: psdk_config.h  state_psdk.json
prot-psdk/source/czi_payload/: czi_payload.c  czi_payload.h
prot-psdk/source/czi_payload/czi_config/: czi_config.h
prot-psdk/source/czi_payload/czi_elog/inc/: elog.h  elog_cfg.h
prot-psdk/source/czi_payload/czi_elog/plugins/file/: elog_file.c  elog_file.h  elog_file_cfg.h
prot-psdk/source/czi_payload/czi_elog/port/: elog_file_port.c  elog_port.c
prot-psdk/source/czi_payload/czi_elog/src/: elog.c  elog_async.c
prot-psdk/source/czi_payload/czi_gimbal/: czi_gimbal.c  czi_gimbal.h
prot-psdk/source/czi_payload/czi_json_handler/: czi_json_handler.c  czi_json_handler.h
prot-psdk/source/czi_payload/czi_json_handler/cJSON/: czi_JSON.c  czi_JSON.h
prot-psdk/source/czi_payload/czi_light/: czi_light.c  czi_light.h
prot-psdk/source/czi_payload/czi_log/: czi_log.c  czi_log.h  czi_logClient.c  czi_logClient.h
prot-psdk/source/czi_payload/czi_megaphone/: czi_megaphone.c  czi_megaphone.h
prot-psdk/source/czi_payload/czi_megaphone/media_handler/: media_handler.c  media_handler.h
prot-psdk/source/czi_payload/czi_msdk_handler/: czi_msdk_handler.c  czi_msdk_handler.h  msdk_protobuf.pb-c.c  msdk_protobuf.pb-c.h  msdk_protobuf.proto
prot-psdk/source/czi_payload/czi_protocol_handler/: czi_protocol.c  czi_protocol.h  czi_protocol_handler.c  czi_protocol_handler.h  protocol_channelRegister.c  protocol_channelRegister.h  protocol_commonHandler.c  protocol_commonHandler.h  protocol_longFormatHandler.c  protocol_longFormatHandler.h  protocol_shortFormatHandler.c  protocol_shortFormatHandler.h
prot-psdk/source/czi_payload/czi_psdk_handler/: czi_psdk_handler.c  czi_psdk_handler.h
prot-psdk/source/czi_payload/czi_transmission/: czi_transmission.c  czi_transmission.h
prot-psdk/source/czi_payload/czi_transmission/mailbox/: czi_mailbox.c  czi_mailbox.h  czi_packet.c  czi_packet.h
prot-psdk/source/czi_payload/czi_transmission/queue/: queue.c  queue.h
prot-psdk/source/czi_payload/czi_util/: czi_util_json.c  czi_util_json.h  fifo_buffer.c  fifo_buffer.h
prot-psdk/source/czi_payload/czi_video/: czi_video.c  czi_video.h
prot-psdk/source/dji_module/camera_emu/: test_payload_cam_emu_base.c  test_payload_cam_emu_media.c
prot-psdk/source/dji_module/data_transmission/: test_data_transmission.c
prot-psdk/source/dji_module/fc_subscription/: test_fc_subscription.c
prot-psdk/source/dji_module/gimbal_emu/: test_payload_gimbal_emu.c
prot-psdk/source/dji_module/gimbal_manager/: test_gimbal_manager.c
prot-psdk/source/dji_module/mop_channel/: test_mop_channel.c
prot-psdk/source/dji_module/power_management/: test_power_management.c
prot-psdk/source/dji_module/upgrade/: README.md  upgrade.c  upgrade.h  upgrade_common_file_transfer.c  upgrade_platform_opt.c  upgrade_platform_opt.h
prot-psdk/source/dji_module/widget/: widget.c  widget.h
prot-psdk/source/dji_module/widget_czi_speaker/: widget_czi_speaker.c  widget_czi_speaker.h
prot-psdk/source/platform/common/osal/: osal_socket.c
prot-psdk/source/platform/common/upgrade_platform_opt/: upgrade_platform_opt_linux.c  upgrade_platform_opt_linux.h
prot-psdk/source/platform/manifold2/: CMakeLists.txt
prot-psdk/source/platform/manifold2/application/: czi_multi_task.c  czi_multi_task.h  dji_sdk_app_info.h  dji_sdk_config.h  main.c
prot-psdk/source/platform/manifold2/hal/: hal_network.c  hal_network.h  hal_uart.c  hal_uart.h  hal_usb_bulk.h
prot-psdk/source/widget_file/cn_big_screen/: widget_config.json
prot-psdk/source/widget_file/cn_big_screen_not_activate/: widget_config.json
prot-psdk/source/widget_file/en_big_screen/: widget_config.json
prot-psdk/source/widget_file/en_big_screen_not_activate/: widget_config.json
